creates racers and tracks

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
 	
 
 	<title>Racer Lab</title>
-	
+
 </head>
 <body>
 
+	<div id="track1" class="raceTrack">
+		<div id="racer1" class="racer"></div>
+	</div>
 
+
+	<div id="track2" class="raceTrack">
+		<div id="racer2" class="racer"></div>
+	</div>
 	
 
 
