--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javasript" src="scripts/main.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 	
 
 	<title>Racer Lab</title>
