creates race function

--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
 	<meta charset="UTF-8">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script type="text/javasript" src="scripts/main.js"></script>
+	<script type="text/javascript" src="scripts/main.js"></script>
+	
 	<link rel="stylesheet" href="css/style.css">
 	
 
 	<title>Racer Lab</title>
 
 </head>
+
 <body>
+	<section class="main">		
 
-	<div id="track1" class="raceTrack">
-		<div id="racer1" class="racer"></div>
-	</div>
+		<div id="track1" class="raceTrack">
+			<div id="racer1" class="racer"></div>
+		</div>
 
 
-	<div id="track2" class="raceTrack">
-		<div id="racer2" class="racer"></div>
-	</div>
+		<div id="track2" class="raceTrack">
+			<div id="racer2" class="racer"></div>
+		</div>
 	
+	</section>
 
+	
 
 </body>
 </html>
