complete winner logic, scaleability, reset button

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 
 <body>
 	<section class="main">		
-
-		<div id="track1" class="raceTrack">
-			<div id="racer1" class="racer"></div>
+		<div class="finishLine1">
+			<div id="track1" class="raceTrack">
+				<div id="racer1" class="racer"></div>
+			</div>
 		</div>
 
-
-		<div id="track2" class="raceTrack">
-			<div id="racer2" class="racer"></div>
+		<div class="finishLine2">
+			<div id="track2" class="raceTrack">
+				<div id="racer2" class="racer"></div>
+			</div>
 		</div>
-	
+
+		<button class="reset">Git 'er Done... Again!</button>
+		
 	</section>
 
 	
