sets basic layout

--- a/landing.html
+++ b/landing.html
@@ -12,8 +12,9 @@
 	<main class="container">
 
 		<div class="logo">
-			<!-- main logo for top left -->
+			<h1>Racer Game</h1>
 		</div>
+			
 
 		<!-- account access container begins -->
 		<div class="logIn">
@@ -21,32 +22,36 @@
 			<div class="signIn">
 				<h2>Sign In!</h2>
 			</div>
-			<div id="emailInput" class="accountInfo">
-				<label for="email">Email</label>
-				<input type="email" name="emailInput">
-			</div>
-			<div id="passwordInput" class="accountInfo">
-				<label for="password">Password</label>
-				<input type="password" name="passwordInput">
-			</div>
-			<div class="gameTime">
-				<button class="raceStart">Start Race!</button>
-			</div>
-			<div class="remember">
-				<input type="checkbox" name="rememberMe" value="remember">
-				<label for="remember">Remember me</label>
-			</div>
-			<div class="facebookLogin">
-				<a href="#">Login with FaceBook</a>
-			</div>
-			<div class="signUp">
-				<p class="newAccount">New to Racer? <a href="#">Sign up now</a></p>
-			</div>
+				<form action="#" method="GET">
+					<div id="emailInput" class="accountInfo">
+						<label for="email">Email</label>
+						<input type="email" name="emailInput">
+					</div>
+					<div id="passwordInput" class="accountInfo">
+						<label for="password">Password</label>
+						<input type="password" name="passwordInput">
+					</div>
+					<div class="gameTime">
+						<button class="raceStart">Start Race!</button>
+					</div>
+					<div class="remember">
+						<input type="checkbox" name="rememberMe" value="remember">
+						<label for="remember">Remember me</label>
+					</div>
+					<div class="facebookLogin">
+						<a href="#">Login with FaceBook</a>
+					</div>
+					<div class="signUp">
+						<p class="newAccount">New to Racer? <a href="#">Sign up now</a></p>
+					</div>
+				</form>
 
-		</div>
+			</div>
 		<!-- account access container ends -->
 
-		<footer class="footer">
+	</main>
+
+	<footer class="footer">
 			<div class="contact-us">
 				<p class="contact-info">Questions? Do not call me.</p>
 			</div>
@@ -60,9 +65,7 @@
 
 		</footer>
 
-	</main>
-
-	<footer></footer>
+	
 	
 </body>
 </html>
