formats login section

--- a/landing.html
+++ b/landing.html
@@ -22,24 +22,27 @@
 			<div class="signIn">
 				<h2>Sign In!</h2>
 			</div>
-				<form action="#" method="GET">
+				<form class="form" action="#" method="GET">
 					<div id="emailInput" class="accountInfo">
 						<label for="email">Email</label>
+						<br>
 						<input type="email" name="emailInput">
 					</div>
 					<div id="passwordInput" class="accountInfo">
 						<label for="password">Password</label>
+						<br>
 						<input type="password" name="passwordInput">
 					</div>
 					<div class="gameTime">
 						<button class="raceStart">Start Race!</button>
 					</div>
-					<div class="remember">
-						<input type="checkbox" name="rememberMe" value="remember">
-						<label for="remember">Remember me</label>
+					<div class="checkBox">
+						<label for="remember">
+							<input id="remember" class="check" type="checkbox" name="rememberMe"><p class="memberMe">Remember me</p>
+						</label>
 					</div>
 					<div class="facebookLogin">
-						<a href="#">Login with FaceBook</a>
+						<a href="#"><img class="fb" src="images/facebook.png" alt=""><p class="login" >Login with FaceBook</p></a>
 					</div>
 					<div class="signUp">
 						<p class="newAccount">New to Racer? <a href="#">Sign up now</a></p>
@@ -64,6 +67,7 @@
 			</div>
 
 		</footer>
+
 
 	
 	
