links index to racepage

--- a/landing.html
+++ b/landing.html
@@ -37,7 +37,7 @@
 						<input type="password" name="passwordInput">
 					</div>
 					<div class="gameTime">
-						<button class="raceStart">Start Race!</button>
+						<button class="raceStart"><a href="racepage.html">Race Start!</a></button>
 					</div>
 					<div class="checkBox">
 						<label for="remember">
