--- a/index.html
+++ b/index.html
@@ -5,33 +5,94 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/main.js"></script>
-	
-	<link rel="stylesheet" href="css/style.css">
-	
 
-	<title>Racer Lab</title>
+	<link rel="stylesheet" href="css/style2.css">
 
+	<title>Racer Game!</title>
 </head>
-
 <body>
-	<section class="main">		
-		<div class="finishLine1">
-			<div id="track1" class="raceTrack">
-				<div id="racer1" class="racer"></div>
-			</div>
-		</div>
+<!-- creates container  -->
+	<main class="container">
 
-		<div class="finishLine2">
-			<div id="track2" class="raceTrack">
-				<div id="racer2" class="racer"></div>
-			</div>
+		<div class="logo">
+			<h1>Racer Game</h1>
 		</div>
+			
 
-		<button class="reset">Git 'er Done... Again!</button>
-		
-	</section>
+		<!-- account access container begins -->
+		<div class="logIn">
+			
+			<div class="signIn">
+				<h2>Sign In!</h2>
+			</div>
+				<form class="form" action="#" method="GET">
+					<div id="emailInput" class="accountInfo">
+						<label for="email">Email</label>
+						<br>
+						<input type="email" name="emailInput">
+					</div>
+					<div id="passwordInput" class="accountInfo">
+						<label for="password">Password</label>
+						<br>
+						<input type="password" name="passwordInput">
+					</div>
+					<div class="gameTime">
+						<button class="raceStart"><a href="racepage.html">Race Start!</a></button>
+					</div>
+					<div class="checkBox">
+						<label for="remember">
+							<input id="remember" class="check" type="checkbox" name="rememberMe"><p class="memberMe">Remember me</p>
+						</label>
+					</div>
+					<div class="facebookLogin">
+						<a href="#"><img class="fb" src="images/facebook.png" alt=""><p class="login" >Login with FaceBook</p></a>
+					</div>
+					<div class="signUp">
+						<p class="newAccount">New to Racer? <a href="#">Sign up now</a></p>
+					</div>
+				</form>
+
+			</div>
+		<!-- account access container ends -->
+
+	</main>
+
+	<footer class="footer">
+			<div class="contact-us">
+				<p class="contact-info">Questions? Do not call me.</p>
+			</div>
+			<div class="navigation">
+				<nav class="gameInfo">
+					<ul>
+						<li class="list" id="instructions">
+							<a href="#">
+								<p class="link">Instructions</p>
+							</a>
+						</li>
+						<li class="list" id="comments">
+							<a href="#">
+								<p class="link">Comments</p>
+							</a>
+						</li>
+						<li class="list" id="leaderBoard" >
+							<a href="#">
+								<p class="link">Leader Board</p>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="dropDown">
+				<select name="languageSelect" id="language">
+					<option value="English">English</option>
+					<option value="Espanol">Espanol</option>
+				</select>
+			</div>
+
+		</footer>
+
 
 	
-
+	
 </body>
 </html>
