--- a/racepage.html
+++ b/racepage.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
-	<section class="main">		
+	<section class="main">	
+		<div class="instructional">
+			<p class="p1instructions">Player 1: press 'right arrow' repeatedly to move your car</p>
+			<p class="p2instructions">Player 2: press '.' repeatedly to move your car</p>
+		</div>
+
+
 		<div class="finishLine1">
 			<div id="track1" class="raceTrack">
 				<div id="racer1" class="racer"></div>
